# Translator

./: README.md
Компиляторы/!!Translator/: !!x_1.bat  !!x_1.xcl  !Translator.bat  !cmake.bat  !cmake_gui_1.bat  !copy_NBRelease_1.bat  !m_1.bat  !make_NBRelease.bat  !unzip.bat  !x.bat  !xcopy_1.bat  !zip_1.bat  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Compiler.sln  Translator.sln  UpgradeLog.htm  UpgradeLog2.htm  build.ninja  cmake_install_1.cmake  expr.bat  llll  rules.ninja  svn_help.bat
Компиляторы/!!Translator/AutoLang/: Read_1.me
Компиляторы/!!Translator/Bugs/: Bugs.cpp
Компиляторы/!!Translator/C99_Lexer/: C99_Lexer.cpp  C99_Lexer.sln  C99_Lexer.vcxproj_1.filters  C99_Lexer_1.vcxproj  lex.bat  parse.h  stdafx_1.cpp  stdafx_1.h  test_const.cpp
Компиляторы/!!Translator/C99_Parser/: C99_Grammar.lex_1.c  C99_Grammar.tab_1.c  C99_Grammar.tab_1.h  C99_Lexer_1.cpp  C99_Parser.vcxproj  C99_Parser.vcxproj_1.filters  C99_Parser_1.cpp  C99_Parser_1.sln  stdafx.cpp  test.cpp
Компиляторы/!!Translator/CLang/: main_1
Компиляторы/!!Translator/Code/: D_Tree.code  Formula_LL_Made_PSR.tree  Formula_LL_Node_PSR.node  Formula_LL_Node_PSR.tree  Formula_NL_Tree_PF.tree  M_Tree.tree  T_Tree.tree
Компиляторы/!!Translator/CxxNtSrc/: CxxParser_1.y  CxxParsing.cxx  grammar_1.dsp  grammar_1.dsw  index.html  makefile.macros
Компиляторы/!!Translator/CxxParser/: CxxLexer.lex.c  CxxLexer_1.cpp  CxxLexing.cxx  CxxLexing.hxx  CxxParser.cpp  CxxParser.sln  CxxParser.tab.c  CxxParser.tab_1.h  CxxParser.vcxproj.filters  CxxParser_1.vcxproj  CxxParsing.cxx  CxxParsing_1.hxx  CxxToken.cpp  stdafx.cpp
Компиляторы/!!Translator/Doc/: LALR(k).docx  Plan.docx  Translator.docx  Вопросы_Lite.docx  Программа_обучения_языки_программирования.doc  Теория и реализация языков программирования_1.html
Компиляторы/!!Translator/ETF/: ETF_LL_C_LL1.journal  ETF_LL_LL1.follow  ETF_LL_LL1.tab  ETF_LL_LL1_1.cell  ETF_LL_LL1_1.first  ETF_LL_LL1_1.formula  ETF_LL_LL1_1.grammar  ETF_LL_LL1_1.journal  ETF_LL_LL1_1.lexeme  ETF_LL_PROG.cpp  ETF_LL_PROG.grammar  ETF_LL_PROG.h  ETF_LL_PROG_1.formula  ETF_LL_TC_LL1.tab  ETF_LL_TC_LL1_1.cell  ETF_LL_TC_LL1_1.first  ETF_LL_TC_LL1_1.follow  ETF_LL_TC_LL1_1.formula  ETF_LL_TC_LL1_1.grammar  ETF_LL_TC_LL1_1.make  ETF_LL_TC_PROG_1.cpp  ETF_LL_TC_PROG_1.formula  ETF_LL_TC_PROG_1.h  ETF_LL_T_LL1.journal  ETF_LL_Tree_LL1.tree  ETF_LR_C_LR0_1.journal  ETF_LR_C_LR1.journal  ETF_LR_LR0.state  ETF_LR_LR0_1.action  ETF_LR_LR0_1.core  ETF_LR_LR0_1.goto  ETF_LR_LR0_1.journal  ETF_LR_LR0_1.tab  ETF_LR_LR1.core  ETF_LR_LR1.eff  ETF_LR_LR1.first  ETF_LR_LR1.goto  ETF_LR_LR1.journal  ETF_LR_LR1.tab  ETF_LR_LR1_1.action  (+37 more)
Компиляторы/!!Translator/Examples/: Example.bat  Example_00_1.bat  Example_00_1.cpp  Example_01.code  Example_01.cpp  Example_01.tree  Example_01_1.bat  Example_02_1.bat  Example_02_1.cpp  Example_03.bat  Example_04.bat  Example_04_1.l  Example_04_1.lex  Example_05.bat  Example_05_1.cpp  Example_06.bat  Example_06_1.cpp  Example_07.cpp  Example_07_1.bat  Example_08.bat  Example_08_1.cpp  Example_09.bat  Example_09_1.cpp  Example_10.bat  Example_10_1.cpp
Компиляторы/!!Translator/Garbage/: ETF_LL_LR1.action  ETF_LL_LR1.state  ETF_LL_LR1Core_1.state  ETF_LL_LR1_1.core  ETF_LL_LR1_1.goto  ETF_LR_LR1Core_1.state  ETF_LR_LR1_1.action  ETF_LR_LR1_1.core  ETF_LR_LR1_1.state
Компиляторы/!!Translator/Grammar/: !LX.bat  5_26.y  5_26_1.tab  Antlr_1.url  BA.tab  BA.y  (+58 more)
(+939 files in other folders)
